(rule
	(targets metaList.ml)
	(deps ../../src-json/meta.json)
	(action (with-stdout-to metaList.ml (run ../prebuild.exe meta ../../src-json/meta.json)))
)

(rule
	(targets defineList.ml)
	(deps ../../src-json/define.json)
	(action (with-stdout-to defineList.ml (run ../prebuild.exe define ../../src-json/define.json)))
)

(rule
	(targets warningList.ml)
	(deps ../../src-json/warning.json)
	(action (with-stdout-to warningList.ml (run ../prebuild.exe warning ../../src-json/warning.json)))
)